# job_analysis_webhook

./: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  webhook_example.py
app/: main.py
app/api/: deps.py
app/api/v1/: __init__.py  api.py
app/api/v1/endpoints/: jobs.py  webhooks.py
app/core/: config.py  security.py
app/middlewares/: webhookSecurity.py
app/models/: job.py
app/schemas/: job.py
app/services/: job_analyzer.py  job_scraper.py  llm_service.py
app/utils/: llm_data_postprocessing.py  logging.py
tests/: conftest.py  test_webhooks.py
