[project]
name = "job-analysis-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.7.0",
    "beautifulsoup4>=4.12.0",
    "black>=25.1.0",
    "fastapi[standard]>=0.115.12",
    "flake8>=7.2.0",
    "google-generativeai>=0.3.0",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "lxml>=4.9.0",
    "mypy>=1.16.0",
    "openai>=1.3.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pydentic>=0.0.1.dev3",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
]
